# FastCoding

./: .gitignore
FastCoder/: FastCoder.m
GNUstep/: CMakeLists.txt  FastCodingTest.m
GNUstep/data/: fastcoded.android  fastcoded.macos  fastcoded.windows  nscoded.android  nscoded.macos  nscoded.windows
Tests/UnitTests/: FastCoderTests.m
